# Cat_Dog_CNN_Classifier

./: .gitignore  README.md  pyproject.toml
docs/: PLANNING.md  PRD.md  TASKS.md
notebooks/: cat_dog_cnn.ipynb
results/metrics/: classification_report.txt  final_metrics.json  training_history.json
