[project]
name = "cat-dog-cnn"
version = "0.1.0"
description = "Cat vs Dog binary image classifier using a custom PyTorch CNN"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "torchinfo>=1.8",
    "ipykernel>=6.25",
    "pillow>=10.0",
    "nbclient>=0.10.4",
]
